--- a/src/components/States/styles.module.scss
+++ b/src/components/States/styles.module.scss
@@ -11,6 +11,7 @@
         border-radius: 5px;
         margin: .2rem;
         height: 30px;
+        padding: 4px;
     }
 
     button {
@@ -20,6 +21,11 @@
         margin: 5px;
         background: rgb(38, 147, 219);
         color: white;
+
+        &:hover{
+            filter: brightness(0.95);
+            box-shadow: black;
+          }
     }
 
     p {
