--- a/src/components/Cities/styles.module.scss
+++ b/src/components/Cities/styles.module.scss
@@ -1,4 +1,5 @@
 .headerContainer {
+    border: 1px solid rgba(0, 0, 0, 0.192);
     margin-top: 5rem;
     width: 50%;
     background: var(--white);
